@@ -1,11 +1,10 @@
 # Created by Jevoom
 #
 # 19-Dec-2011
-#   Change supervisor to catch StandardError and let SystemExit fall through untouched.
-#   Add opts to log output from daemonize
+#   Restart logging after daemon is called
 
 module Jerbil
-  Version = '0.2.15'
+  Version = '0.2.16'
   Version_Date = '19-Dec-2011'
-  Ident = 'jerbil-0.2.15 19-Dec-2011'
+  Ident = 'jerbil-0.2.16 19-Dec-2011'
 end
