@@ -1,5 +1,9 @@
 ==History
 
+jerbil-0.2.16 19-Dec-2011
+
+Restart logging after daemon is called
+
 jerbil-0.2.15 19-Dec-2011
 
 Change supervisor to catch StandardError and let SystemExit fall through untouched.
